Left + Right aligned images should not be floated on small screens (to avoid the tiny column of content)

--- a/src/assets/less/responsive.less
+++ b/src/assets/less/responsive.less
@@ -110,4 +110,13 @@
 			}
 		}
 	}
+
+	.alignright,
+	.alignleft {
+		display: block;
+		float: none;
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
